<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Modified LBRY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="find_content">Find Content</string>
    <string name="your_content">Your Content</string>
    <string name="wallet">Wallet</string>
    <string name="following">Following</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="your_tags">Your Tags</string>
    <string name="all_content">All Content</string>
    <string name="channels">Channels</string>
    <string name="library">Library</string>
    <string name="publishes">Publishes</string>
    <string name="new_publish">New Publish</string>
    <string name="rewards">Rewards</string>
    <string name="invites">Invites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sign_in">Sign In</string>
    <string name="shuffle">Shuffle</string>
    <string name="startup_failed">App startup failed. Please check your data connection and try again. If this problem persists, please email hello@lbry.com</string>
    <string name="no_claim_search_content">No content to display at this time. Please refine your selection or check back later.</string>
    <string name="welcome_to_lbry">Welcome to LBRY.</string>
    <string name="welcome_paragraph">LBRY is a community-controlled content platform where you can find and publish videos, music, books, and more.</string>
    <string name="welcome_tos">By continuing, I agree to the &lt;a href="https://lbry.com/termsofservice"&gt;Terms of Service&lt;/a&gt; and confirm I am over the age of 13.</string>
    <string name="welcome_please_wait">Please wait while we get some things ready…</string>
    <string name="use_lbry">Use LBRY »</string>
    <string name="uri_placeholder">Search videos, music and more</string>
    <string name="find_channels_to_follow">Find Channels to follow</string>
    <string name="channels_you_follow">Channels you follow</string>
    <string name="discover">Discover</string>
    <string name="lbry_works_better">LBRY works better if you follow at least 5 creators you like. Sign in to show creators you follow if you already have an account.</string>
    <string name="select_five_subscriptions">Please select up to 5 creators to continue.</string>
    <string name="n_remaining">%1$d remaining…</string>
    <string name="done">Done</string>
    <string name="all">All</string>
    <string name="discover_channels">Discover new channels</string>
    <string name="anonymous">Anonymous</string>
    <string name="tags">Tags</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="tip">Tip</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="open_on_odysee_com">Open on ODYSEE.COM</string>
    <string name="report">Report</string>
    <string name="loading_decentralized_data">Loading decentralized data…</string>
    <string name="related_content">Related Content</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No comments to display at this time.</string>
    <string name="sdk_initializing_comments">Comments will display after the background service is initialized.</string>
    <string name="comment_error">Your comment could not be posted at this time. Please try again later.</string>
    <string name="channel_disabled_comments">This channel has disabled comments on their page.</string>
    <string name="creator_disabled_comments">The creator of this content has disabled comments.</string>
    <string name="share_lbry_content">Share LBRY content</string>
    <string name="view">View</string>
    <string name="play">Play</string>
    <string name="unsupported_content">Unsupported Content</string>
    <string name="unsupported_content_desc">Sorry, we are unable to display this content in the app. You can find the file %1$sin your downloads folder.</string>
    <string name="unsupported_content_to_odysee_desc">Sorry, we are unable to display this content in the app. Click the button to open it on the Odysee website.</string>
    <string name="nothing_at_this_location">There\'s nothing at this location.</string>
    <string name="dmca_complaint_blocked">In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this content from our applications. &lt;a href="https://lbry.com/faq/dmca"&gt;Read more&lt;/a&gt;</string>
    <string name="dmca_complaint_channel_blocked">In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this channel from our applications. &lt;a href="https://lbry.com/faq/dmca"&gt;Read more&lt;/a&gt;</string>
    <string name="publish_something_here">Publish something here</string>
    <string name="cannot_view_claim">This content cannot be accessed at this time. Please try again later.</string>
    <string name="zero_duration">0:00</string>
    <string name="claim_file_not_found">The file at "%1$s" does not exist.</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="delete_file">Delete file</string>
    <string name="confirm_delete_file_message">Are you sure you want to remove this file from your device?</string>
    <string name="unable_to_view_url">Failed to load %1$s. Please try again later.</string>
    <string name="no_cast_session_available">There is no cast session available at this time.</string>
    <string name="delete_content">Delete content?</string>
    <string name="confirm_delete_content_message">Are you sure you want to unpublish this content? No files will be removed from your device.</string>
    <string name="content_deleted">The content was successfully deleted from the blockchain.</string>
    <string name="content_failed_delete">The content could not be deleted at this time. Please try again later.</string>
    <string name="comment">Comment</string>
    <string name="comment_as">Comment as</string>
    <string name="please_enter_comment">Please enter a comment to post.</string>
    <string name="please_select_channel">Please select a channel to post your comment as.</string>
    <string name="comment_form_post">Post</string>
    <string name="comment_posted">Your comment was successfully posted.</string>
    <string name="please_select_repost_channel">Please select a channel to repost on.</string>
    <string name="reply">Reply</string>
    <string name="replying_to">Replying to %1$s</string>
    <string name="choose_app">Choose app</string>
    <plurals name="view_count">
        <item quantity="one">%1$s view</item>
        <item quantity="other">%1$s views</item>
    </plurals>
    <plurals name="confirm_purchase_message">
        <item quantity="one">This will purchase "%1$s" for %2$s credit</item>
        <item quantity="other">This will purchase "%1$s" for %2$s credits</item>
    </plurals>
    <plurals name="post_and_tip">
        <item quantity="one">Post and tip %1$s credit?</item>
        <item quantity="other">Post and tip %1$s credits?</item>
    </plurals>
    <plurals name="post_for_credits">
        <item quantity="one">Post for %1$s credit</item>
        <item quantity="other">Post for %1$s credits</item>
    </plurals>
    <plurals name="confirm_post_comment">
        <item quantity="one">This will post your comment with a tip of %1$s credit for %2$s</item>
        <item quantity="other">This will post your comment with a tip of %1$s credits for %2$s</item>
    </plurals>
    <string name="no_channel_info">There\'s nothing here yet.\nPlease check back later.</string>
    <string name="content">Content</string>
    <string name="website">Website</string>
    <string name="reposted">reposted</string>
    <string name="receive_all_notifications">You will receive all notifications</string>
    <string name="receive_no_notifications">You will not receive notifications for this channel</string>
    <string name="confirm_unfollow">Stop following channel?</string>
    <string name="confirm_unfollow_message">Are you sure you want to stop following this channel?</string>
    <plurals name="follower_count">
        <item quantity="one">%1$s follower</item>
        <item quantity="other">%1$s followers</item>
    </plurals>
    <string name="no_publishes_created">It looks like you have not published content to LBRY yet.</string>
    <string name="record">Record</string>
    <string name="take_photo">Take a Photo</string>
    <string name="upload_file">Upload a file</string>
    <string name="no_videos_found">We could not find any videos on your device. Take a photo or record a video to get started.</string>
    <string name="loading_videos">Please wait while we load your videos…</string>
    <string name="storage_permission_rationale_videos">LBRY requires access to be able to display and publish your videos, images and other files from your device.</string>
    <string name="camera_permission_rationale_record">LBRY requires access to your camera to record videos.</string>
    <string name="camera_permission_rationale_photo">LBRY requires access to your camera to take photos.</string>
    <string name="edit_content">Edit content</string>
    <string name="mature_tags">Mature tags</string>
    <string name="price">Price</string>
    <string name="free_publish">Your content will be free. Press the toggle to set a price.</string>
    <string name="content_address">Content address</string>
    <string name="randomize">Randomize</string>
    <string name="address">Address</string>
    <string name="content_address_desc">The address where people can find your content (ex. lbry://myvideo)</string>
    <string name="license">License</string>
    <string name="license_desc">License description</string>
    <string name="additional_options">Additional Options</string>
    <string name="show_extra_fields">Show extra fields</string>
    <string name="hide_extra_fields">Hide extra fields</string>
    <string name="no_file_found">No file found to publish.</string>
    <string name="wallet_sync">Wallet Sync</string>
    <string name="sync_status">Sync status</string>
    <string name="off">Off</string>
    <string name="email">Email</string>
    <string name="no_connected_email">No connected email</string>
    <string name="manual_backup">&lt;a href="https://lbry.com/faq/how-to-backup-wallet#android"&gt;Manual backup&lt;/a&gt;</string>
    <string name="sync_faq">&lt;a href="https://lbry.com/faq/how-to-backup-wallet#sync"&gt;Sync FAQ&lt;/a&gt;</string>
    <string name="continue_text">Continue</string>
    <string name="retrieving_account_information">Retrieving account information…</string>
    <string name="please_enter_your_password">Please enter the password you used to secure your wallet.</string>
    <string name="wallet_security_purposes">Note: for wallet security purposes, LBRY is unable to reset your password.</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Please enter your phone number.</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enter_phone_verify_code">Please enter the verification code sent to %1$s</string>
    <string name="code_placeholder">0000</string>
    <string name="verify">Verify</string>
    <string name="invite_by_email">Invite by Email</string>
    <string name="invite_someone">Invite someone you know by email and earn credits when they join lbry.tv.</string>
    <string name="invite_email_placeholder">imaginary@friend.com</string>
    <string name="invite">Invite</string>
</resources>