<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AryanPurple">

    <LinearLayout
        android:id="@+id/verification_phone_collect_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="36dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/opensans"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:text="@string/enter_phone_number"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/verification_phone_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:ccpDialog_showTitle="false"
                app:ccp_arrowColor="@color/white"
                app:ccp_countryPreference="US,IN,NG,CH,BR,TH"
                app:ccp_defaultNameCode="US"
                app:ccp_textSize="20sp" />

            <EditText
                android:id="@+id/verification_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:fontFamily="@font/opensans"
                android:singleLine="true"
                android:textFontWeight="300"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verification_phone_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans"
                android:text="@string/continue_text"
                android:textColor="@color/text" />

            <ProgressBar
                android:id="@+id/verification_phone_new_progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_phone_verify_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="36dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/opensans"
            android:text="@string/verify_phone_number"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/verification_phone_verify_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:text="@string/enter_phone_verify_code"
            android:textColor="@color/white"
            android:textFontWeight="300"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/verification_phone_code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/opensans"
            android:hint="@string/code_placeholder"
            android:inputType="number"
            android:letterSpacing="1.25"
            android:singleLine="true"
            android:textAlignment="center"
            android:textFontWeight="300"
            android:textSize="48sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verification_phone_verify_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/opensans"
                android:text="@string/verify"
                android:textColor="@color/text" />

            <ProgressBar
                android:id="@+id/verification_phone_verify_progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/verification_phone_verify_button"
                android:visibility="gone" />

            <TextView
                android:id="@+id/verification_phone_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:fontFamily="@font/opensans"
                android:gravity="right"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textFontWeight="300" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>