<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AryanPurple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="36dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/verification_wallet_sync_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/inter"
                    android:text="@string/wallet_sync"
                    android:textColor="@color/white"
                    android:textFontWeight="300"
                    android:textSize="28sp" />

                <ProgressBar
                    android:id="@+id/verification_wallet_loading_progress"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/verification_wallet_loading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter"
                android:text="@string/retrieving_account_information"
                android:textColor="@color/white"
                android:textFontWeight="300"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verification_wallet_input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verification_wallet_sync_title"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/verification_wallet_sync_paragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/please_enter_your_password"
                android:textColor="@color/white"
                android:textFontWeight="300"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_wallet_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textFontWeight="300"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/wallet_security_purposes"
                android:textColor="@color/white"
                android:textFontWeight="300"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verification_wallet_done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/button"
                android:fontFamily="@font/inter"
                android:text="@string/done"
                android:textColor="@color/text" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>